--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,18 @@
             <artifactId>leopard-java</artifactId>
             <version>2.0.1</version>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.14.2</version> <!-- Use the latest version -->
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.28</version> <!-- Use the latest version -->
+            <scope>provided</scope>
+        </dependency>
+
     </dependencies>
 
 </project>
